# Barnes-Hut-Simulator

./: .gitignore  BHTree.cpp  BHTree.h  Build.md  CMakeLists.txt  IIntegrator.h  IModel.cpp  IModel.h  INSTALL.md  IntegratorADB2.cpp  IntegratorADB2.h  IntegratorADB3.cpp  IntegratorADB4.cpp  IntegratorADB4.h  IntegratorADB5.cpp  IntegratorADB5.h  IntegratorADB6.cpp  IntegratorADB6.h  IntegratorHeun.cpp  IntegratorRK3.h  IntegratorRK5.cpp  IntegratorRK5.h  IntegratorRKF4.cpp  IntegratorRKF4.h  MagPendWnd.h  Makefile  ModelNBody.cpp  ModelNBody.h  NBodyWnd.cpp  NBodyWnd.h  README.md  SDLWnd.cpp  SDLWnd.h  main.cpp
include/: BHTree.h  Constants.h  IIntegrator.h  IModel.h  IntegratorADB2.h  IntegratorADB3.h  IntegratorADB4.h  IntegratorADB5.h  IntegratorADB6.h  IntegratorEuler.h  IntegratorEulerImproved.h  IntegratorHeun.h  IntegratorRK3.h  IntegratorRK4.h  IntegratorRK5.h  IntegratorRKF4.h  ModelMagPend.h  ModelNBody.h  NBodyWnd.h  SDLWnd.h  Types.h  Vector.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: BHTree.cpp  IIntegrator.cpp  IModel.cpp  IntegratorADB2.cpp  IntegratorADB3.cpp  IntegratorADB4.cpp  IntegratorADB5.cpp  IntegratorADB6.cpp  IntegratorEuler.cpp  IntegratorEulerImproved.cpp  IntegratorHeun.cpp  IntegratorRK3.cpp  IntegratorRK4.cpp  IntegratorRK5.cpp  IntegratorRKF4.cpp  ModelNBody.cpp  NBodyWnd.cpp  SDLWnd.cpp  Types.cpp  Vector.cpp  main.cpp
